docs/reports/megalinter/linters_logs/ERROR-PYTHON_MYPY.log
Results of mypy linter (version 1.16.0)
See documentation on https://megalinter.io/8.8.0/descriptors/python_mypy/
-----------------------------------------------

❌ [ERROR] for workspace /github/workspace
Linter raw log:
server/main.py:8:1: error: Cannot find implementation or library stub for
module named "fastapi"  [import-not-found]
    from fastapi import FastAPI
    ^
server/main.py:9:1: error: Cannot find implementation or library stub for
module named "fastapi.middleware.cors"  [import-not-found]
    from fastapi.middleware.cors import CORSMiddleware
    ^
server/main.py:9:1: note: See https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
server/main.py:10:1: error: Cannot find implementation or library stub for
module named "pydantic_settings"  [import-not-found]
    from pydantic_settings import BaseSettings, SettingsConfigDict
    ^
server/main.py:48:1: error: Function is missing a return type annotation 
[no-untyped-def]
    async def lifespan(app: FastAPI):
    ^
server/main.py:79:1: error: Function is missing a return type annotation 
[no-untyped-def]
    async def root():
    ^
server/main.py:86:1: error: Function is missing a return type annotation 
[no-untyped-def]
    async def health_check():
    ^
Found 6 errors in 1 file (checked 1 source file)

